--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.TipTime" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.TipTime" parent="Theme.AppCompat.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -10,7 +10,65 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/color_primary</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <!--    TEXT VIEW   -->
+    <style name="TextView"/>
+    <style name="TextView.TitleApp">
+        <item name="android:fontFamily">@font/poppins_semibold</item>
+        <item name="android:textColor">@color/color_primary</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="TextView.TitleForm">
+        <item name="android:fontFamily">@font/poppins_regular</item>
+        <item name="android:textColor">@color/text_primary</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="TextView.Option">
+        <item name="android:fontFamily">@font/poppins_regular</item>
+        <item name="android:textColor">@color/text_primary</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+    <style name="TextView.SecondaryTitle">
+        <item name="android:fontFamily">@font/poppins_regular</item>
+        <item name="android:textColor">@color/text_secondary</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <!--    EDIT TEXT   -->
+    <style name="EditText"/>
+    <style name="EditText.InputForm">
+        <item name="android:fontFamily">@font/poppins_regular</item>
+        <item name="android:textColor">@color/text_primary</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:background">@drawable/shape_with_outline</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:textColorHint">@color/color_secondary</item>
+    </style>
+
+    <!--    BUTTON-->
+    <style name="Button"/>
+    <style name="Button.MainButton">
+        <item name="android:fontFamily">@font/poppins_semibold</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:background">@drawable/shape_primary</item>
+    </style>
+
+    <style name="Switch"/>
+    <style name="Switch.RoundTip">
+        <!-- active thumb & track color (30% transparency) -->
+        <item name="colorControlActivated">@color/color_primary</item>
+
+        <!-- inactive thumb color -->
+        <item name="colorSwitchThumbNormal">@color/color_secondary</item>
+
+        <!-- inactive track color (30% transparency) -->
+        <item name="android:colorForeground">#42221f1f</item>
+    </style>
+
 </resources>
